--- a/index.html
+++ b/index.html
@@ -23,4 +23,7 @@
       <h2 class="text6">Thanks For Watching</h2>
     </div>
   </body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/ScrollTrigger.min.js"></script>
+  <script src="script.js" type="text/javascript"></script>
 </html>
